# python-template

./: README.md  pyproject.toml  requirements.txt  test_main.py
.github/: dependabot.yml
