[tool.poetry]
name = "python-template"
version = "0.2.0"
description = ""
authors = ["Robert Smieja <robertsmieja@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.981"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
